--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Cronograma</title>
 </head>
 
 <body>
     <div id="app">
         <header>
-            <img src="/assets/Bandeiras dos países/logo.svg" alt="Logo da NLW" />
+            <img src="assets/Bandeiras dos países/logo.svg" alt="Logo da NLW" />
         </header>
         <main id="cards"></main>
     </div>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
